--- a/views/partials/pickform.hbs
+++ b/views/partials/pickform.hbs
@@ -49,7 +49,7 @@
 
 <body>
 <div class="boxedtransp">
-    <form action="/lists/bookingtype/save"  role="form" method="POST">
+    <form action="/lists/headertype/save"  role="form" method="POST">
         <fieldset>
             <legend>Booking:</legend>
             <!-- <div class="form-group">
@@ -67,7 +67,7 @@
               <!-- <span style="display:inline-block; width: 10px;"></span> -->
         <span class="">
               <select id="soflow"  class="" name="position">
-                {{#each list_bookingtypes}}
+                {{#each list_headertypes}}
                   <option style="color:#59b3b3">{{name}}</option>
                 {{/each}}
               </select>
