--- a/views/booking.hbs
+++ b/views/booking.hbs
@@ -36,7 +36,7 @@
       </div>
           
     <div id="right">
-      {{> pickform list_bookingtypes = list_bookingtypes}}
+      {{> pickform list_headertypes = list_headertypes}}
     </div>
   
     </div>
