--- a/views/bookingtype_list.hbs
+++ b/views/bookingtype_list.hbs
@@ -12,7 +12,7 @@
               <!-- <span style="display:inline-block; width: 10px;"></span> -->
         <span class="">
               <select id="soflow"  class="" name="position">
-                {{#each list_bookingtypes}}
+                {{#each list_headertypes}}
                   <option style="color:#59b3b3">{{name}}</option>
                 {{/each}}
               </select>
@@ -22,7 +22,7 @@
 
 <div id="comments">
     <h2><a href="/posts/#{{id}}">test test</a></h2>
-  {{#each list_bookingtypes}}
+  {{#each list_headertypes}}
   <h2><a href="/posts/#{{id}}">{{name}}</a></h2>
   <div>{{body}}</div>
   {{/each}}
