--- a/views/adminpage.hbs
+++ b/views/adminpage.hbs
@@ -18,7 +18,7 @@
 
     <!-- included local html's -->
     <script> $(function(){$("#pickform").load("../pickform.html"); });</script> 
-    <script> $(function(){$("#leftpanel").load("../leftpanel.html"); });</script> 
+    {{!-- <script> $(function(){$("#leftpanel").load("../leftpanel.html"); });</script>  --}}
     <script> $(function(){$("#rightpanel").load("../rightpanel.html"); });</script> 
 
     <title>Mango Riviera</title>
@@ -32,7 +32,8 @@
         {{> header firstlink = "Home"}}
 
       <div id="left">        
-        <div id="leftpanel"></div>
+        {{!-- <div id="leftpanel"></div> --}}
+        {{> leftpanel}}
       </div>
           
     <div id="right">
@@ -100,11 +101,12 @@ var span = document.getElementsByClassName("close")[0];
 
 // When the user clicks the button, open the modal 
 //( 11, '{{id}}', '{{name}}','sub-name','message',0, 'Edit the header type name:', '')
-function showModal(type, idn, parent_id, name, subname, msg, price, maintext, infotype, url, actionmsg) {
+function showModal(type, idn, parent_id, name, subname, msg, price, maintext, infotype, url, actionmsg, price) {
     console.log("IDN1="+idn);
     console.log("NAME1="+name);
     console.log("message="+msg);
     console.log("infotype="+infotype);
+    console.log("price="+price);
 
     modal.style.display = "block";
 
@@ -224,7 +226,7 @@ function formSubmit() {
       <div class="boxedtransp">
         <label id="labl" style="margin-left:5px;">Admin functions: &nbsp; (change any &amp; see tables change, would require password in real life)</label>
         <ul>
-        <li><a onclick="showModal( 10, '', '', '','sub-name','',0, 'Add a new header type:', '','', '')" href="#"> add new header type </a>
+        <li><a onclick="showModal( 10, '', '', '','sub-name','',0, 'Add a new header type:', '','', '', 0)" href="#"> add new header type </a>
           <span style="display:inline-block; width: 80px;"></span>
           <a data-toggle="tooltip" data-placement="bottom" title='Upon a click it deletes all changes made by you to Mongoose collections, restores all initial entries to collections as if you never had changed anything. Defaults are auto-restored every night at 4 a.m. EST !' onclick="" href="#">( Undo all changes, restore defaults )</a>
         </li>
@@ -239,8 +241,8 @@ function formSubmit() {
           <ul>
           {{#each list_headertypes}}
             <li><span>{{name}}</span> &nbsp; 
-            <a class="addn" onclick="showModal( 11, '{{id}}', '', '{{name}}','sub-name','',0, 'Edit the header type name:', '','', '')" href="#"> edit </a> &nbsp; 
-            <a class="addn" onclick="showModal( 12, '{{id}}', '', '{{name}}','sub-name','',0, 'Delete the header type ?', '','', '')" href="#"> delete </a> &nbsp;
+            <a class="addn" onclick="showModal( 11, '{{id}}', '', '{{name}}','sub-name','',0, 'Edit the header type name:', '','', '', 0)" href="#"> edit </a> &nbsp; 
+            <a class="addn" onclick="showModal( 12, '{{id}}', '', '{{name}}','sub-name','',0, 'Delete the header type ?', '','', '', 0)" href="#"> delete </a> &nbsp;
             {{!-- <a class="addn" onclick="showModal( 20, '', '{{id}}', '{{name}}','','',0, 'Add a new booking SUB-type:', '', '', '')" href="#"> add new SUB-type </a> --}}
             <br/>
           {{/each}}
@@ -262,7 +264,7 @@ function formSubmit() {
           <ul>
           {{#each list_headertypes}}
             <li><span>{{name}}</span> &nbsp; 
-            <a class="addn" onclick="showModal( 20, '', '{{id}}', 'Header type: &nbsp; &nbsp;{{name}}','','',0, 'Add a new booking SUB-type:', '','', '')" href="#"> add new SUB-type </a>
+            <a class="addn" onclick="showModal( 20, '', '{{id}}', 'Header type: &nbsp; &nbsp;{{name}}','','',0, 'Add a new booking SUB-type:', '','', '', 0)" href="#"> add new SUB-type </a>
             <br/>
           {{/each}}
           </ul>
@@ -282,8 +284,8 @@ function formSubmit() {
           <ul>
           {{#each list_booking_subtypes}}
             <li><span>{{subname}} &nbsp; &nbsp; ( {{parent.name}} )</span> &nbsp; 
-            <a class="addn" onclick="showModal( 21, '{{id}}', '{{parent._id}}', 'Header type: &nbsp;&nbsp;{{parent.name}}','{{subname}}','{{message}}',0, 'Edit the booking SUB-type name:', '{{infotype}}','{{infowebpage}}', '{{actionmsg}}')" href="#"> edit </a> &nbsp; 
-            <a class="addn" onclick="showModal( 22, '{{id}}', '{{parent._id}}', 'Header type: &nbsp;&nbsp;{{parent.name}}','{{subname}}','',0, 'Delete the booking SUB-type ?', '','', '')" href="#"> delete </a> &nbsp; 
+            <a class="addn" onclick="showModal( 21, '{{id}}', '{{parent._id}}', 'Header type: &nbsp;&nbsp;{{parent.name}}','{{subname}}','{{message}}',0, 'Edit the booking SUB-type name:', '{{infotype}}','{{infowebpage}}', '{{actionmsg}}', 0)" href="#"> edit </a> &nbsp; 
+            <a class="addn" onclick="showModal( 22, '{{id}}', '{{parent._id}}', 'Header type: &nbsp;&nbsp;{{parent.name}}','{{subname}}','',0, 'Delete the booking SUB-type ?', '','', '', 0)" href="#"> delete </a> &nbsp; 
             <br/>
           {{/each}}
           </ul>
@@ -302,7 +304,7 @@ function formSubmit() {
           <ul>
           {{#each list_headertypes}}
             <li><span>{{name}}</span> &nbsp; 
-            <a class="addn" onclick="showModal( 30, '', '{{id}}', 'Header type: &nbsp; &nbsp;{{name}}','','',0, 'Add a new sell SUB-type:', '','', '')" href="#"> add new SUB-type </a>
+            <a class="addn" onclick="showModal( 30, '', '{{id}}', 'Header type: &nbsp; &nbsp;{{name}}','','',0, 'Add a new sell SUB-type:', '','', '', 0)" href="#"> add new SUB-type </a>
             <br/>
           {{/each}}
           </ul>
@@ -323,8 +325,8 @@ function formSubmit() {
           <ul>
           {{#each list_sell_subtypes}}
             <li><span>{{subname}} &nbsp; &nbsp; ( {{parent.name}} )</span> &nbsp; 
-            <a class="addn" onclick="showModal( 31, '{{id}}', '{{parent._id}}', 'Header type: &nbsp;&nbsp;{{parent.name}}','{{subname}}','{{message}}',0, 'Edit the sell SUB-type name:', '{{infotype}}','{{infowebpage}}', '{{actionmsg}}')" href="#"> edit </a> &nbsp; 
-            <a class="addn" onclick="showModal( 32, '{{id}}', '{{parent._id}}', 'Header type: &nbsp;&nbsp;{{parent.name}}','{{subname}}','',0, 'Delete the sell SUB-type ?', '','', '')" href="#"> delete </a> &nbsp; 
+            <a class="addn" onclick="showModal( 31, '{{id}}', '{{parent._id}}', 'Header type: &nbsp;&nbsp;{{parent.name}}','{{subname}}','{{message}}',0, 'Edit the sell SUB-type name:', '{{infotype}}','{{infowebpage}}', '{{actionmsg}}', '{{price}}')" href="#"> edit </a> &nbsp; 
+            <a class="addn" onclick="showModal( 32, '{{id}}', '{{parent._id}}', 'Header type: &nbsp;&nbsp;{{parent.name}}','{{subname}}','',0, 'Delete the sell SUB-type ?', '','', '', 0)" href="#"> delete </a> &nbsp; 
             <br/>
           {{/each}}
           </ul>
@@ -343,7 +345,7 @@ function formSubmit() {
           <ul>
           {{#each list_headertypes}}
             <li><span>{{name}}</span> &nbsp; 
-            <a class="addn" onclick="showModal( 40, '', '{{id}}', 'Header type: &nbsp; &nbsp;{{name}}','','',0, 'Add a new info SUB-type:', '','', '')" href="#"> add new SUB-type </a>
+            <a class="addn" onclick="showModal( 40, '', '{{id}}', 'Header type: &nbsp; &nbsp;{{name}}','','',0, 'Add a new info SUB-type:', '','', '',0)" href="#"> add new SUB-type </a>
             <br/>
           {{/each}}
           </ul>
@@ -364,8 +366,8 @@ function formSubmit() {
           <ul>
           {{#each list_info_subtypes}}
             <li><span>{{subname}} &nbsp; &nbsp; ( {{parent.name}} )</span> &nbsp; 
-            <a class="addn" onclick="showModal( 41, '{{id}}', '{{parent._id}}', 'Header type: &nbsp;&nbsp;{{parent.name}}','{{subname}}','{{message}}',0, 'Edit the booking SUB-type name:', '{{infotype}}','{{infowebpage}}', '{{actionmsg}}')" href="#"> edit </a> &nbsp; 
-            <a class="addn" onclick="showModal( 42, '{{id}}', '{{parent._id}}', 'Header type: &nbsp;&nbsp;{{parent.name}}','{{subname}}','',0, 'Delete the booking SUB-type ?', '','', '')" href="#"> delete </a> &nbsp; 
+            <a class="addn" onclick="showModal( 41, '{{id}}', '{{parent._id}}', 'Header type: &nbsp;&nbsp;{{parent.name}}','{{subname}}','{{message}}',0, 'Edit the booking SUB-type name:', '{{infotype}}','{{infowebpage}}', '{{actionmsg}}', 0)" href="#"> edit </a> &nbsp; 
+            <a class="addn" onclick="showModal( 42, '{{id}}', '{{parent._id}}', 'Header type: &nbsp;&nbsp;{{parent.name}}','{{subname}}','',0, 'Delete the booking SUB-type ?', '','', '',0)" href="#"> delete </a> &nbsp; 
             <br/>
           {{/each}}
           </ul>
