--- a/views/partials/dashboard.hbs
+++ b/views/partials/dashboard.hbs
@@ -9,7 +9,7 @@
         <ul id="tab"></ul>
     </div>
 
-    <h4>Spa and Wellness</h4>  <!- spa Wellness, fitness O'zone, crossfit ManGo->
+    <h4>Spa and Wellness2</h4>  <!- spa Wellness, fitness O'zone, crossfit ManGo->
         <ul id="tabspa"></ul>
     <h4>Meals</h4>  <!- dolphine show, visit ancient castle, sport contest ->
         <ul id="tabmeals"></ul>
