--- a/views/home.hbs
+++ b/views/home.hbs
@@ -32,7 +32,8 @@
         {{> header firstlink = "About"}}
       
       <div id="left">        
-        <div id="leftpanel"></div>
+        {{!-- <div id="leftpanel"></div> --}}
+        {{> leftpanel}}
       </div>
           
     <div id="right">
