--- a/views/partials/leftpanel.hbs
+++ b/views/partials/leftpanel.hbs
@@ -26,7 +26,7 @@
       
     <div id="weather_placeholder"></div>
         
-    <script src="/js/weather.js"></script>
+    {{!-- <script src="/js/weather.js"></script> --}}
 
 
           
