--- a/views/bookform.hbs
+++ b/views/bookform.hbs
@@ -24,7 +24,7 @@
   
     <div class="container">
 
-        {{> header firstlink = "About"}}
+        {{> header firstlink = "Home"}}
       
       <div id="left">        
         {{!-- <div id="leftpanel"></div> --}}
