--- a/views/datepick.hbs
+++ b/views/datepick.hbs
@@ -4,7 +4,7 @@
     <title></title>
     <link rel="stylesheet" type="text/css" href="../static/css/custom.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-    <link href="..static/css/bootstrap-datetimepicker.min.css" rel="stylesheet" media="screen">
+    <link href="../static/css/bootstrap-datetimepicker.min.css" rel="stylesheet" media="screen">
 
     <script type='text/javascript' src="../socket.io/socket.io.js"></script>
     <script type='text/javascript' src='../js/libs/hbs.js'></script>
@@ -18,65 +18,35 @@
     <script type="text/javascript" src="../js/libs/bootstrap-datetimepicker.js" charset="UTF-8"></script>
     <script type="text/javascript" src="../js/datepickerCustom.js" charset="UTF-8"></script> --}}
 
+    <!-- fonts -->
+    <link href='https://fonts.googleapis.com/css?family=Assistant' rel='stylesheet'/>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
+
 </head>
 
 <body>
-    {{> header firstlink = "About"}}
-<div class="container">
+    {{> header firstlink = "Home"}}
+<div class="content">
 
       <div id="left">        
-        {{!-- <div id="leftpanel"></div> --}}
+
+        {{!-- for_partial should contain array of data. If it is null error will take place. --}}
+        {{!-- therefore checking if it is null before using it --}}
+
         {{#if for_partial }}
             {{> leftpanel}}
         {{/if}}
       </div>
           
     <div id="right">
-
-     <form action="" class="form-horizontal">
-        <fieldset>
-            <legend>Test</legend>
-            <div class="control-group">
-                <label class="control-label">DateTime Picking</label>
-                <div class="controls input-append date form_datetime" data-date="1979-09-16T05:25:07Z" data-date-format="dd MM yyyy - HH:ii p" data-link-field="dtp_input1">
-                    <input style="color:black" size="16" type="text" value="" readonly>
-                    <span class="add-on"><i class="icon-remove"></i></span>
-					<span class="add-on"><i class="icon-th"></i></span>
-                </div>
-				<input type="hidden" id="dtp_input1" value="" /><br/>
-            </div>
-			<div class="control-group">
-                <label class="control-label">Date Picking</label>
-                <div class="controls input-append date form_date" data-date="" data-date-format="dd MM yyyy" data-link-field="dtp_input2" data-link-format="yyyy-mm-dd">
-                    <input style="color:black" size="16" type="text" value="" readonly>
-                    <span class="add-on"><i class="icon-remove"></i></span>
-					<span class="add-on"><i class="icon-th"></i></span>
-                </div>
-				<input type="hidden" id="dtp_input2" value="" /><br/>
-            </div>
-			<div class="control-group">
-                <label class="control-label">Time Picking</label>
-                <div class="controls input-append date form_time" data-date="" data-date-format="hh:ii" data-link-field="dtp_input3" data-link-format="hh:ii">
-                    <input style="color:black" size="16" type="text" value="" readonly>
-                    <span class="add-on"><i class="icon-remove"></i></span>
-					<span class="add-on"><i class="icon-th"></i></span>
-                </div>
-				<input type="hidden" id="dtp_input3" value="" /><br/>
-            </div>
-        </fieldset>
-    </form>
-
-          {{> sendform}}
+        {{> pickform}}
     </div>
-  
-    </div>
-        {{> footer}}
-    </div>
+</div>
+    
 
       {{> videopartial}}
 
-    </div>
-</div>
 
 <script src="../js/index2.js"></script>
 {{!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
@@ -86,6 +56,8 @@
 <script type="text/javascript" src="../js/libs/bootstrap-datetimepicker.js" charset="UTF-8"></script>
 <script type="text/javascript" src="../js/datepickerCustom.js" charset="UTF-8"></script>
 
-
+       
 </body>
+
+{{> footer}}
 </html>
