--- a/views/home.hbs
+++ b/views/home.hbs
@@ -8,7 +8,7 @@
     <!-- all JS -->
     <script src="/js/libs/jquery-3.3.1.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-    <script src="socket.io/socket.io.js"></script>
+    <script src="../socket.io/socket.io.js"></script>
     <script type='text/javascript' src='/js/libs/hbs.js'></script>
     <script src="/js/libs/moment-with-locales.js"></script>
 
@@ -17,15 +17,15 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
     <!-- included local html's -->
-    <script> $(function(){$("#pickform").load("pickform.html"); });</script> 
-    <script> $(function(){$("#leftpanel").load("leftpanel.html"); });</script> 
-    <script> $(function(){$("#rightpanel").load("rightpanel.html"); });</script> 
+    {{!-- <script> $(function(){$("#pickform").load("pickform.html"); });</script> 
+    <script> $(function(){$("#leftpanel").load("leftpanel.html"); });</script>  --}}
+    <script> $(function(){$("#rightpanel").load("../rightpanel.html"); });</script> 
 
     <title>Mango Riviera</title>
   
   </head>
 
-<body style="background-size: 100%; background-attachment: fixed; " background="/static/images/sandbeach.jpeg"></body>
+<body style="background-size: 100%; background-attachment: fixed; " background="/static/images/sandbeach.jpeg">
   
     <div id="content">
 
@@ -47,6 +47,6 @@
 
       {{> videopartial}}
 
-      <script src="/js/index2.js"></script>
+      <script src="../js/index2.js"></script>
   </body>
 </html>
