resolved few deficiencies on using weather forecast in user booking page

--- a/views/home.hbs
+++ b/views/home.hbs
@@ -37,8 +37,10 @@
       </div>
           
     <div id="right">
-      <div id="rightpanel"></div>
-      {{> sendform}}
+      {{!-- <div class="boxedtransp"> --}}
+        <div id="rightpanel"></div>
+        {{> sendform}}
+      {{!-- </div> --}}
     </div>
   
     </div>
