--- a/views/datepick.hbs
+++ b/views/datepick.hbs
@@ -2,21 +2,21 @@
 <html>
 <head>
     <title></title>
-    <link rel="stylesheet" type="text/css" href="../static/css/custom.css">
+    <link rel="stylesheet" type="text/css" href="../../static/css/custom.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-    <link href="../static/css/bootstrap-datetimepicker.min.css" rel="stylesheet" media="screen">
+    <link href="../../static/css/bootstrap-datetimepicker.min.css" rel="stylesheet" media="screen">
 
-    <script type='text/javascript' src="../socket.io/socket.io.js"></script>
-    <script type='text/javascript' src='../js/libs/hbs.js'></script>
-    <script type='text/javascript' src="../js/libs/moment-with-locales.js"></script>
-    <script type="text/javascript" src="../js/libs/jquery-3.3.1.min.js" charset="UTF-8"></script>
+    <script type='text/javascript' src="../../socket.io/socket.io.js"></script>
+    <script type='text/javascript' src='../../js/libs/hbs.js'></script>
+    <script type='text/javascript' src="../../js/libs/moment-with-locales.js"></script>
+    <script type="text/javascript" src="../../js/libs/jquery-3.3.1.min.js" charset="UTF-8"></script>
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-    <link href="../static/css/bootstrap-datetimepicker.min.css" rel="stylesheet" media="screen">
-    <script type="text/javascript" src="../js/libs/jquery-3.3.1.min.js" charset="UTF-8"></script>
-    {{!-- <script type="text/javascript" src="../js/libs/bootstrap.min.js"></script>
-    <script type="text/javascript" src="../js/libs/bootstrap-datetimepicker.js" charset="UTF-8"></script>
-    <script type="text/javascript" src="../js/datepickerCustom.js" charset="UTF-8"></script> --}}
+    <link href="../../static/css/bootstrap-datetimepicker.min.css" rel="stylesheet" media="screen">
+    <script type="text/javascript" src="../../js/libs/jquery-3.3.1.min.js" charset="UTF-8"></script>
+    {{!-- <script type="text/javascript" src="../../js/libs/bootstrap.min.js"></script>
+    <script type="text/javascript" src="../../js/libs/bootstrap-datetimepicker.js" charset="UTF-8"></script>
+    <script type="text/javascript" src="../../js/datepickerCustom.js" charset="UTF-8"></script> --}}
 
     <!-- fonts -->
     <link href='https://fonts.googleapis.com/css?family=Assistant' rel='stylesheet'/>
@@ -40,6 +40,7 @@
       </div>
           
     <div id="right">
+        <p>bookingID = {{bookingID}}</p>
         {{> pickform}}
     </div>
 </div>
@@ -48,13 +49,13 @@
       {{> videopartial}}
 
 
-<script src="../js/index2.js"></script>
+<script src="../../js/index2.js"></script>
 {{!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 <link href="static/css/bootstrap-datetimepicker.min.css" rel="stylesheet" media="screen"> --}}
-{{!-- <script type="text/javascript" src="../js/libs/jquery-3.3.1.min.js" charset="UTF-8"></script> --}}
-<script type="text/javascript" src="../js/libs/bootstrap.min.js"></script>
-<script type="text/javascript" src="../js/libs/bootstrap-datetimepicker.js" charset="UTF-8"></script>
-<script type="text/javascript" src="../js/datepickerCustom.js" charset="UTF-8"></script>
+{{!-- <script type="text/javascript" src="../../js/libs/jquery-3.3.1.min.js" charset="UTF-8"></script> --}}
+<script type="text/javascript" src="../../js/libs/bootstrap.min.js"></script>
+<script type="text/javascript" src="../../js/libs/bootstrap-datetimepicker.js" charset="UTF-8"></script>
+<script type="text/javascript" src="../../js/datepickerCustom.js" charset="UTF-8"></script>
 
        
 </body>
