--- a/views/partials/leftpanel.hbs
+++ b/views/partials/leftpanel.hbs
@@ -26,37 +26,9 @@
       
     <div id="weather_placeholder"></div>
         
-    {{!-- <script src="/js/weather.js"></script> --}}
-
-
-          
-          <!-- code for DASHBOARD partial -->
-          <script id="dashboard-partial" type="text/x-handlebars-template">
-            <div class="boxedtransp">
-                <div>    
-                        <!-- <legend>Booking:</legend>     -->
-                    <legend style="font-size:16px">Activities</legend>
-                    <ul id="tab"></ul>
-                </div>
-            
-                <h4>Spa and Wellness</h4>  <!- spa Wellness, fitness O'zone, crossfit ManGo->
-                    <ul id="tabspa"></ul>
-                <h4>Meals</h4>  <!- dolphine show, visit ancient castle, sport contest ->
-                    <ul id="tabmeals"></ul>
-                <h4>Services</h4>  <!- airport shuttle, room service, sport contest ->
-                    <ul id="tabservices"></ul>
-            </div>
-            <a class="addn" onclick="showData( '{{id}}', '{{parent._id}}', 'Header type: &nbsp;&nbsp;{{parent.name}}','{{subname}}','{{message}}',0, 'Edit the sell SUB-type name:', '{{infotype}}','{{infowebpage}}', '{{actionmsg}}', '{{price}}')" href="#"> show data </a>
-      
-          </script>
-
-            <div class="boxedtransp">
-                {{printItems for_partial}}
-            </div>
-
-          {{!-- <div id="dashboard_placeholder"></div>
-
-        <script src="/js/dashboard.js"></script> --}}
+    <div class="boxedtransp">
+        {{showTables for_partial}}
+    </div>
 
       <script>
       $(document).ready(function(){
@@ -64,30 +36,5 @@
       });
       </script>
       
-      <script>
-          function showData(id, parent_id, parentname, subname, message, infotype, infowebpage, actionmsg, price){
-            alert(`ID ${id} ${parent_id} ${parentname} ${subname} ${message} ${infotype} ${infowebpage} ${actionmsg} ${price}`);
-          }
-      </script>
-
-      <script id="some-template" type="text/x-handlebars-template"> 
-        <table>
-          <!-- <thead> 
-              <th>Name</th> 
-              <th>Occupancy</th> 
-              <th>Booking</th> 
-          </thead> -->
-          <tbody>
-              {{#users}}
-              <tr>
-                  <td>{{fullName fullName}}</td>
-                  <td>{{occupancy}}</td>
-                  <td><a href="/booking/{{linkedName fullName}}">{{bookNow}}</a></td>
-              </tr> 
-              {{/users}} 
-          </tbody> 
-        </table> 
-        </script>
-
-  </body>
+        </body>
 </html>
