--- a/views/partials/pickform.hbs
+++ b/views/partials/pickform.hbs
@@ -1,42 +1,7 @@
 
-<div class="boxedtransp">
+<div>
     <form action=""  role="form">
         <fieldset>
-            <legend>Booking:</legend>
-            <!-- <div class="form-group">
-                <label for="dtp_input1" class="col-md-2 control-label">DateTime Picking</label>
-                <div class="input-group date form_datetime col-md-5" data-date="1979-09-16T05:25:07Z" data-date-format="dd MM yyyy - HH:ii p" data-link-field="dtp_input1">
-                    <input class="form-control" size="10" type="text" value="" readonly>
-                    <span class="input-group-addon"><span class="glyphicon glyphicon-remove"></span></span>
-					<span class="input-group-addon"><span class="glyphicon glyphicon-th"></span></span>
-                </div>
-				<input type="hidden" id="dtp_input1" value="" /><br/>
-            </div> -->
-
-            <div class="form-group">
-                    <label for="dtp_input2" class="col-md-2 control-label">Procedure</label>
-                    <!-- <span style="display:inline-block; width: 10px;"></span> -->
-                <span class="">
-                    <select id="soflow"  class="">
-                        <option style="color:#59b3b3">Framework Not Specified</option>
-                        <option style="color:#59b3b3">Framework Not Specified2</option>
-                        <option style="color:#59b3b3">Framework Not Specified3</option>
-                    </select>
-                </span>  
-            </div>
-
-            <div class="form-group">
-                    <label for="dtp_input2" class="col-md-2 control-label">Procedure</label>
-                    <!-- <span style="display:inline-block; width: 10px;"></span> -->
-                <span class="">
-                    <select id="soflow"  class="">
-                        <option style="color:#59b3b3">Framework Not Specified</option>
-                        <option style="color:#59b3b3">Framework Not Specified2</option>
-                        <option style="color:#59b3b3">Framework Not Specified3</option>
-                    </select>
-                </span>  
-            </div>
-
 			<div class="form-group">
                 <label for="dtp_input2" class="col-md-2 control-label">Date</label>
                 <div class="input-group date form_date col-md-5" data-date="" data-date-format="dd MM yyyy" data-link-field="dtp_input2" data-link-format="yyyy-mm-dd">
@@ -62,9 +27,12 @@
                         <span class="input-group-addon"><span class="glyphicon glyphicon-remove"></span></span>
                         <span class="input-group-addon"><span class="glyphicon glyphicon-time"></span></span>
                     </div>
-                    <input type="hidden" id="dtp_input4" value="" /><br/>
+                    <input type="hidden" id="dtp_input4" value="" />
                 </div>
-    
+                <div class="col-md-3">
+                    <button class="col-md-9 button1">Save</button>
+                    <br/><br/>
+                </div>
         </fieldset>
     </form>
 </div>
