added buyform and passing price data in json format

--- a/views/adminpage.hbs
+++ b/views/adminpage.hbs
@@ -136,6 +136,8 @@ function showModal(type, idn, parent_id, name, subname, msg, price, maintext, in
 
     if ( type < 14 ) fe.dradio.style.display = 'none'; else fe.dradio.style.display = 'block';
     if ( type < 14 ) fe.dactionmsg.style.display = 'none';  else fe.dactionmsg.style.display = 'block';
+    if ( type < 14 ) fe.dmsg.style.display = 'none';  else fe.dmsg.style.display = 'block';
+    if ( type < 14 ) fe.durl.style.display = 'none';  else fe.durl.style.display = 'block';
 
     if ( type < 14 || type == 22 || type == 32 || type == 42 ) fe.dsubname.style.display = 'none'; 
       else fe.dsubname.style.display = 'block'; 
