--- a/views/buyform.hbs
+++ b/views/buyform.hbs
@@ -42,16 +42,25 @@
           
     <div id="right">
         <div class="boxedtransp">
-            <legend>&nbsp; &nbsp;Booking:</legend>
+            <legend>&nbsp; &nbsp;Sale:</legend>
             {{!-- <p style="margin-left:15px">Please make your booking for: </p> --}}
             <span style="margin-left:15px">
                 {{!-- THIS part send complex array of data and uses JS function to render subnmame --}}
                 {{#if for_partial }}
                     {{showSubname for_partial}}
+                    <script>
+                        var for_partial1 = '{{for_part2}}';
+                        for_partial1 = for_partial1.replace(/(\r\n\t|\n|\r\t)/gm,"");
+                        for_partial1 = for_partial1.replace(/&quot;/g, '"');
+                        for_partial1 = for_partial1.substring(1, for_partial1.length-1);
+                        console.log("Price1 = "+for_partial1);
+                        var for_partial2 = JSON.parse(for_partial1);
+                        console.log("Price2 = "+for_partial2);
+                    </script>
                 {{/if}}
             </span>
             <br/>
-            {{> bookpartial}}
+            {{> buypartial}}
         </div>
     </div>
 </div>
