--- a/views/partials/leftpanel.hbs
+++ b/views/partials/leftpanel.hbs
@@ -27,7 +27,7 @@
     <div id="weather_placeholder"></div>
         
     <div class="boxedtransp">
-        {{showTables for_partial}}
+        {{showTables for_tables}}
     </div>
 
       <script>
