--- a/views/datepick.hbs
+++ b/views/datepick.hbs
@@ -31,10 +31,10 @@
 
       <div id="left">        
 
-        {{!-- for_partial should contain array of data. If it is null error will take place. --}}
+        {{!-- for_tables should contain array of data. If it is null error will take place. --}}
         {{!-- therefore checking if it is null before using it --}}
 
-        {{#if for_partial }}
+        {{#if for_tables }}
             {{!-- THIS part send complex array of data and uses JS function to render subnmame --}}
             {{> leftpanel}}
         {{/if}}
@@ -46,8 +46,8 @@
             {{!-- <p style="margin-left:15px">Please make your booking for: </p> --}}
             <span style="margin-left:15px">
                 {{!-- THIS part send complex array of data and uses JS function to render subnmame --}}
-                {{#if for_partial }}
-                    {{showSubname for_partial}}
+                {{#if for_tables }}
+                    {{showSubname for_tables}}
                 {{/if}}
             </span>
             <br/><br/>
