--- a/views/partials/buypartial.hbs
+++ b/views/partials/buypartial.hbs
@@ -1,9 +1,27 @@
-
 <div>
     <form action=""  role="form">
         <fieldset>
 			<div class="form-group">
-                <label for="dtp_input2" class="col-md-2 control-label">Date</label>
+                    <div class="col-md-10 control-label">
+                        <label id="title">Title: </label>
+                        <br/><br/>
+                    </div>
+                <div>
+                    <label for="dtp_input2" class="col-md-4 control-label">Price per unit:</label>
+                    <div class="input-group col-md-5">
+                        <p id="priceperunit"></p>
+                    </div><br/>
+                </div>
+                <div>
+                    <label for="dtp_input2" class="col-md-4 control-label">Total price:</label>
+                    <div class="input-group col-md-5">
+                        <p id="pricetotal"></p>
+                    </div>
+                    <br/>
+                </div>
+                
+
+                <label for="dtp_input2" class="col-md-4 control-label">Date of event</label>
                 <div class="input-group date form_date col-md-5" data-date="" data-date-format="dd MM yyyy" data-link-field="dtp_input2" data-link-format="yyyy-mm-dd">
                     <input class="form-control" size="10" type="text" value="" readonly>
                     <span class="input-group-addon"><span class="glyphicon glyphicon-remove"></span></span>
@@ -30,19 +48,13 @@
                     <input type="hidden" id="dtp_input4" value="" /> --}}
 
                 <div>
-                    <label for="dtp_input2" class="col-md-2 control-label">Quantity</label>
+                    <label for="dtp_input2" class="col-md-4 control-label">Quantity</label>
                     <div class="input-group spinner col-md-5">
                         <input type="text" class="form-control" value="1">
                         <div class="input-group-btn-vertical">
                         <button class="btn btn-default" type="button"><i class="fa fa-caret-up"></i></button>
                         <button class="btn btn-default" type="button"><i class="fa fa-caret-down"></i></button>
                         </div>
-                    </div>
-                </div>
-                <div>
-                    <label for="dtp_input2" class="col-md-2 control-label">Total:</label>
-                    <div class="input-group col-md-5">
-                        <p id="pricetotal"></p>
                     </div>
                 </div>
 
@@ -58,12 +70,13 @@
 
 <script>
     (function ($) {
-  $('.spinner .btn:first-of-type').on('click', function() {
-    $('.spinner input').val( parseInt($('.spinner input').val(), 10) + 1);
-  });
-  $('.spinner .btn:last-of-type').on('click', function() {
-    $('.spinner input').val( parseInt($('.spinner input').val(), 10) - 1);
-  });
-  
-})(jQuery);
+        $('.spinner .btn:first-of-type').on('click', function() {
+            $('.spinner input').val( parseInt($('.spinner input').val(), 10) + 1);
+            plusAndUpdateTotal();
+        });
+        $('.spinner .btn:last-of-type').on('click', function() {
+            $('.spinner input').val( parseInt($('.spinner input').val(), 10) - 1);
+            minusAndUpdateTotal();
+        });    
+    })(jQuery);
 </script>
